--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "realzzy-website",
   "version": "1.3.2",
   "description": "Realzzy React Website Server",
-  "author": "Realzzy <hello@therealzzy.xyz>",
-  "license": "Apache-2.0",
+  "author": "Realzzy",
+  "license": "ISC",
   "main": "index.js",
   "dependencies": {
     "@emotion/css": "^11.11.0",
     "@emotion/react": "^11.11.0",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@fontsource-variable/space-grotesk": "^5.0.2",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
@@ -329,7 +330,5 @@
     "babel-plugin-macros": "^3.1.0",
     "tailwindcss": "^3.3.2",
     "twin.macro": "^3.3.1"
-  },
-  "author": "Realzzy",
-  "license": "ISC"
+  }
 }
