--- a/package.json
+++ b/package.json
@@ -328,6 +328,6 @@
     "@types/react": "18.2.6",
     "babel-plugin-macros": "^3.1.0",
     "tailwindcss": "^3.3.2",
-    "twin.macro": "3.3.1"
+    "twin.macro": "^3.3.1"
   }
 }
