Last commit, v2.therealzzy.xyz

--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@emotion/react": "^11.11.0",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@fontsource-variable/karla": "^5.0.6",
     "@fontsource-variable/space-grotesk": "^5.0.2",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.0.18",
     "@icons-pack/react-simple-icons": "^7.2.0",
@@ -248,7 +250,6 @@
     "react-dom": "^18.2.0",
     "react-is": "^16.13.1",
     "react-loading-skeleton": "^3.3.1",
-    "react-particles": "^2.9.3",
     "react-powerglitch": "^1.0.0",
     "react-random-reveal": "^2.0.0",
     "react-scroll-parallax": "^3.4.2",
